5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4183/executions/1752_3097.log
== TEST (2019-05-16 16:34:46) 
-- CODE:
print(2+3-4+6+6-7+9+10+15)
pos = 0
pos = int(input("Digite: "))
pon = 0
while (not pos == 0):
	
print(2+3-4+6+6-7+9+10+15)
-- ERROR:
File "XXXX", line 7
    print(2+3-4+6+6-7+9+10+15)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:46:54) 
-- CODE:
pos = 0
pon = 0
while (not pos == 0):
	pos = int(input("Digite: "))
	if (pos < 0):
		pon = 0
	if (pos == 1):
		pon = 25
	elif (pos == 2):
		pon = 18
	elif (pos == 3):
		pon = 12
	elif (pos > 4 and pos < 10):
		pont = 14
	pont = pont * 10
print(pont)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 16, in <module>
    print(pont)
NameError: name 'pont' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:47:09) 
-- CODE:
pos = 0
pon = 0
while (not pos == 0):
	pos = int(input("Digite: "))
	if (pos < 0):
		pon = 0
	if (pos == 1):
		pon = 25
	elif (pos == 2):
		pon = 18
	elif (pos == 3):
		pon = 12
	elif (pos > 4 and pos < 10):
		pont = 14
	pont = pon * 10
print(pon)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 16, in <module>
    print(pont)
NameError: name 'pont' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:47:27) 
-- CODE:
pos = 0
pon = 0
while (not pos == 0):
	pos = int(input("Digite: "))
	if (pos == 1):
		pon = 25
	elif (pos == 2):
		pon = 18
	elif (pos == 3):
		pon = 12
	elif (pos > 4 and pos < 10):
		pont = 14
	pont = pon * 10
print(pon)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 16, in <module>
    print(pont)
NameError: name 'pont' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:47:35) 
-- CODE:
pos = 1
pon = 0
while (not pos == 0):
	pos = int(input("Digite: "))
	if (pos == 1):
		pon = 25
	elif (pos == 2):
		pon = 18
	elif (pos == 3):
		pon = 12
	elif (pos > 4 and pos < 10):
		pont = 14
	pont = pon * 10
print(pon)
		
-- OUTPUT:
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:48:04) 
-- CODE:
pos = 1
pon = 0
while (not pos == 0):
	pos = int(input("Digite: "))
	if (pos == 1):
		pon = 25
	elif (pos == 2):
		pon = 18
	elif (pos == 3):
		pon = 12
	elif (pos > 4 and pos < 10):
		pont = 14
pont = pon * 10
print(pon)
		
-- OUTPUT:
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:48:41) 
-- CODE:
pos = 1
pon = 0
while (not pos == 0):
	pos = int(input("Digite: "))
	if (pos == 1):
		pon = 25
	elif (pos == 2):
		pon = 18
	elif (pos == 3):
		pon = 12
	elif (pos > 4 and pos < 10):
		pont = 14
pon = pon * 10
print(pon)
		
-- OUTPUT:
120
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 16:49:03) 
-- CODE:
pos = 1
pon = 0
while (not pos == 0):
	pos = int(input("Digite: "))
	if (pos == 1):
		pon = 25
	elif (pos == 2):
		pon = 18
	elif (pos == 3):
		pon = 12
	elif (pos > 4 and pos < 10):
		pont = 14
pon = pon * 10
print(pon)
		
-- EXECUTION TIME:
0.188683
-- TEST CASE 1:
---- input:
1
2
3
4
5
6
7
8
9
10
0
---- correct output:
104
---- user output:
120
-- TEST CASE 2:
---- input:
1
1
1
-20
-1
2
2
2
3
3
3
0
---- correct output:
165
---- user output:
120
-- TEST CASE 3:
---- input:
20
20
20
19
19
19
18
18
18
0
---- correct output:
0
---- user output:
0
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 16:49:44) 
-- CODE:
pos = 1
pon = 0
while (not pos == 0):
	pos = int(input("Digite: "))
	if (pos == 1):
		pon = 25
	elif (pos == 2):
		pon = 18
	elif (pos == 3):
		pon = 12
	elif (pos > 4 and pos < 10):
		pont = 14
	else:
		pon = 0
pon = pon * 10
print(pon)
		
-- EXECUTION TIME:
0.199097
-- TEST CASE 1:
---- input:
1
2
3
4
5
6
7
8
9
10
0
---- correct output:
104
---- user output:
0
-- TEST CASE 2:
---- input:
1
1
1
-20
-1
2
2
2
3
3
3
0
---- correct output:
165
---- user output:
0
-- TEST CASE 3:
---- input:
20
20
20
19
19
19
18
18
18
0
---- correct output:
0
---- user output:
0
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:49:46) 
-- CODE:
pos = 1
pon = 0
while (not pos == 0):
	pos = int(input("Digite: "))
	if (pos == 1):
		pon = 25
	elif (pos == 2):
		pon = 18
	elif (pos == 3):
		pon = 12
	elif (pos > 4 and pos < 10):
		pont = 14
	else:
		pon = 0
pon = pon * 10
print(pon)
		
-- OUTPUT:
120
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 16:49:48) 
-- CODE:
pos = 1
pon = 0
while (not pos == 0):
	pos = int(input("Digite: "))
	if (pos == 1):
		pon = 25
	elif (pos == 2):
		pon = 18
	elif (pos == 3):
		pon = 12
	elif (pos > 4 and pos < 10):
		pont = 14
	else:
		pon = 0
pon = pon * 10
print(pon)
		
-- EXECUTION TIME:
0.162811
-- TEST CASE 1:
---- input:
1
2
3
4
5
6
7
8
9
10
0
---- correct output:
104
---- user output:
0
-- TEST CASE 2:
---- input:
1
1
1
-20
-1
2
2
2
3
3
3
0
---- correct output:
165
---- user output:
0
-- TEST CASE 3:
---- input:
20
20
20
19
19
19
18
18
18
0
---- correct output:
0
---- user output:
0
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:49:56) 
-- CODE:
pos = 1
pon = 0
while (not pos == 0):
	pos = int(input("Digite: "))
	if (pos == 1):
		pon = 25
	elif (pos == 2):
		pon = 18
	elif (pos == 3):
		pon = 12
	elif (pos > 4 and pos < 10):
		pont = 14
	else:
		pon = 0
pon = pon * 10
print(pon)
		
-- OUTPUT:
120
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 16:50:45) 
-- CODE:
pos = 1
pon = 0
while (not pos == 0):
	pos = int(input("Digite: "))
	if (pos == 1):
		pon = 25
	elif (pos == 2):
		pon = 18
	elif (pos == 3):
		pon = 12
	elif (pos > 4 and pos < 10):
		pont = 14
pon = pon * 10
print(pon)
		
-- EXECUTION TIME:
0.210341
-- TEST CASE 1:
---- input:
1
2
3
4
5
6
7
8
9
10
0
---- correct output:
104
---- user output:
120
-- TEST CASE 2:
---- input:
1
1
1
-20
-1
2
2
2
3
3
3
0
---- correct output:
165
---- user output:
120
-- TEST CASE 3:
---- input:
20
20
20
19
19
19
18
18
18
0
---- correct output:
0
---- user output:
0
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:50:57) 
-- CODE:
pos = 1
pon = 0
while (not pos == 0):
	pos = int(input("Digite: "))
	if (pos == 1):
		pon = 25
	elif (pos == 2):
		pon = 18
	elif (pos == 3):
		pon = 12
	elif (pos > 4 and pos < 10):
		pont = 14
pon = pon * 10
print(pon)
		
-- OUTPUT:
120
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 16:51:44) 
-- CODE:
pos = 1
pon = 0
while (not pos == 0):
	pos = int(input("Digite: "))
	if (pos == 1):
		pon = 25
	elif (pos == 2):
		pon = 18
	elif (pos == 3):
		pon = 12
	elif (pos > 4 and pos < 10):
		pont = 14
pon = pon * pos
print(pon)
		
-- EXECUTION TIME:
0.205673
-- TEST CASE 1:
---- input:
1
2
3
4
5
6
7
8
9
10
0
---- correct output:
104
---- user output:
0
-- TEST CASE 2:
---- input:
1
1
1
-20
-1
2
2
2
3
3
3
0
---- correct output:
165
---- user output:
0
-- TEST CASE 3:
---- input:
20
20
20
19
19
19
18
18
18
0
---- correct output:
0
---- user output:
0
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 16:52:17) 
-- CODE:
pos = 1
pon = 0
while (not pos == 0):
	pos = int(input("Digite: "))
	if (pos == 1):
		pon = 25
	elif (pos == 2):
		pon = 18
	elif (pos == 3):
		pon = 12
	elif (pos > 4 and pos < 10):
		pont = 14
pon = pon ** pon
print(pon)
		
-- EXECUTION TIME:
0.185071
-- TEST CASE 1:
---- input:
1
2
3
4
5
6
7
8
9
10
0
---- correct output:
104
---- user output:
8916100448256
-- TEST CASE 2:
---- input:
1
1
1
-20
-1
2
2
2
3
3
3
0
---- correct output:
165
---- user output:
8916100448256
-- TEST CASE 3:
---- input:
20
20
20
19
19
19
18
18
18
0
---- correct output:
0
---- user output:
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:52:24) 
-- CODE:
pos = 1
pon = 0
while (not pos == 0):
	pos = int(input("Digite: "))
	if (pos == 1):
		pon = 25
	elif (pos == 2):
		pon = 18
	elif (pos == 3):
		pon = 12
	elif (pos > 4 and pos < 10):
		pont = 14
pon = pon * 10
print(pon)
		
-- OUTPUT:
120
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:52:36) 
-- CODE:
pos = 1
pon = 0
while (not pos == 0):
	pos = int(input("Digite: "))
	if (pos == 1):
		pon = 25
	elif (pos == 2):
		pon = 18
	elif (pos == 3):
		pon = 12
	elif (pos > 4 and pos < 10):
		pont = 14
pon = pon * 10
print(pon)
		
-- OUTPUT:
120
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 16:54:23) 
-- CODE:
pos = 1
pon = 0
while (not pos == 0):
	pos = int(input("Digite: "))
	if (pos == 1):
		pon = 25
	elif (pos == 2):
		pon = 18
	elif (pos == 3):
		pon = 12
	elif (pos > 4 and pos < 10):
		pon = 14
pon = pon * 10
print(pon)
		
-- EXECUTION TIME:
0.171118
-- TEST CASE 1:
---- input:
1
2
3
4
5
6
7
8
9
10
0
---- correct output:
104
---- user output:
140
-- TEST CASE 2:
---- input:
1
1
1
-20
-1
2
2
2
3
3
3
0
---- correct output:
165
---- user output:
120
-- TEST CASE 3:
---- input:
20
20
20
19
19
19
18
18
18
0
---- correct output:
0
---- user output:
0
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 16:54:56) 
-- CODE:
pos = 1
pon = 0
while (not pos == 0):
	pos = int(input("Digite: "))
	if (pos == 1):
		pon = 25
	elif (pos == 2):
		pon = 18
	elif (pos == 3):
		pon = 12
	elif (pos == 6):
		pon == 8
	elif (pos > 4 and pos < 10):
		pon = 14
pon = pon * 10
print(pon)
		
-- EXECUTION TIME:
0.185626
-- TEST CASE 1:
---- input:
1
2
3
4
5
6
7
8
9
10
0
---- correct output:
104
---- user output:
140
-- TEST CASE 2:
---- input:
1
1
1
-20
-1
2
2
2
3
3
3
0
---- correct output:
165
---- user output:
120
-- TEST CASE 3:
---- input:
20
20
20
19
19
19
18
18
18
0
---- correct output:
0
---- user output:
0
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 16:55:14) 
-- CODE:
pos = 1
pon = 0
while (not pos == 0):
	pos = int(input("Digite: "))
	if (pos == 1):
		pon = 25
	elif (pos == 2):
		pon = 18
	elif (pos == 3):
		pon = 12
	elif (pos == 6):
		pon == 8
	elif (pos > 4 and pos < 10):
		pon = 14
pon = pon + pon*pos
print(pon)
		
-- EXECUTION TIME:
0.179208
-- TEST CASE 1:
---- input:
1
2
3
4
5
6
7
8
9
10
0
---- correct output:
104
---- user output:
14
-- TEST CASE 2:
---- input:
1
1
1
-20
-1
2
2
2
3
3
3
0
---- correct output:
165
---- user output:
12
-- TEST CASE 3:
---- input:
20
20
20
19
19
19
18
18
18
0
---- correct output:
0
---- user output:
0
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 16:55:34) 
-- CODE:
pos = 1
pon = 0
while (not pos == 0):
	pos = int(input("Digite: "))
	if (pos == 1):
		pon = 25
	elif (pos == 2):
		pon = 18
	elif (pos == 3):
		pon = 12
	elif (pos == 6):
		pon == 8
	elif (pos >= 4 and pos <= 10):
		pon = 14
pon = pon * 10
print(pon)
		
-- EXECUTION TIME:
0.226362
-- TEST CASE 1:
---- input:
1
2
3
4
5
6
7
8
9
10
0
---- correct output:
104
---- user output:
140
-- TEST CASE 2:
---- input:
1
1
1
-20
-1
2
2
2
3
3
3
0
---- correct output:
165
---- user output:
120
-- TEST CASE 3:
---- input:
20
20
20
19
19
19
18
18
18
0
---- correct output:
0
---- user output:
0
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 16:55:44) 
-- CODE:
pos = 1
pon = 0
while (not pos == 0):
	pos = int(input("Digite: "))
	if (pos == 1):
		pon = 25
	elif (pos == 2):
		pon = 18
	elif (pos == 3):
		pon = 12
	elif (pos == 6):
		pon == 8
	elif (pos >= 4 and pos <= 10):
		pon = 14
pon = pon = pon*pos
print(pon)
		
-- EXECUTION TIME:
0.142457
-- TEST CASE 1:
---- input:
1
2
3
4
5
6
7
8
9
10
0
---- correct output:
104
---- user output:
0
-- TEST CASE 2:
---- input:
1
1
1
-20
-1
2
2
2
3
3
3
0
---- correct output:
165
---- user output:
0
-- TEST CASE 3:
---- input:
20
20
20
19
19
19
18
18
18
0
---- correct output:
0
---- user output:
0
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:56:07) 
-- CODE:
pos = 1
pon = 0
while (not pos == 0):
	pos = int(input("Digite: "))
	if (pos == 1):
		pon = 25
	elif (pos == 2):
		pon = 18
	elif (pos == 3):
		pon = 12
	elif (pos == 6):
		pon == 8
	else:
		pon = 14
pon = pon * 10
print(pon)
		
-- OUTPUT:
140
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 16:56:08) 
-- CODE:
pos = 1
pon = 0
while (not pos == 0):
	pos = int(input("Digite: "))
	if (pos == 1):
		pon = 25
	elif (pos == 2):
		pon = 18
	elif (pos == 3):
		pon = 12
	elif (pos == 6):
		pon == 8
	else:
		pon = 14
pon = pon * 10
print(pon)
		
-- EXECUTION TIME:
0.147532
-- TEST CASE 1:
---- input:
1
2
3
4
5
6
7
8
9
10
0
---- correct output:
104
---- user output:
140
-- TEST CASE 2:
---- input:
1
1
1
-20
-1
2
2
2
3
3
3
0
---- correct output:
165
---- user output:
140
-- TEST CASE 3:
---- input:
20
20
20
19
19
19
18
18
18
0
---- correct output:
0
---- user output:
140
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 16:57:42) 
-- CODE:
cont = 0
pos = 1
pon = 0
while (not pos == 0):
	pos = int(input("Digite: "))
	if (pos == 1):
		pon = 25
		cont = cont + 1
	elif (pos == 2):
		pon = 18
		cont = cont + 1
	elif (pos == 3):
		pon = 12
		cont = cont + 1
	elif (pos == 6):
		pon == 8
		cont = cont + 1
	elif (pos > 4 and pos < 10):
		pon = 14
pon = pon * 10
print(pon)
		
-- EXECUTION TIME:
0.146495
-- TEST CASE 1:
---- input:
1
2
3
4
5
6
7
8
9
10
0
---- correct output:
104
---- user output:
140
-- TEST CASE 2:
---- input:
1
1
1
-20
-1
2
2
2
3
3
3
0
---- correct output:
165
---- user output:
120
-- TEST CASE 3:
---- input:
20
20
20
19
19
19
18
18
18
0
---- correct output:
0
---- user output:
0
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 20:01:42) 
-- CODE:
pos = 1
pon = 0
while (not pos == 0):
	pos = int(input("Digite: "))
	if (pos == 1):
		pon = 25
		cont = cont + 1
	elif (pos == 2):
		pon = 18
		cont = cont + 1
	elif (pos == 3):
		pon = 12
		cont = cont + 1
	elif (pos == 6):
		pon == 8
		cont = cont + 1
	elif (pos > 4 and pos < 10):
		pon = 14
pon = pon * 10
print(pon)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    cont = cont + 1
NameError: name 'cont' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
